# KickCall-MCP-Demo

./: .gitignore  README.md
mcp-client-demo/: main.py  main_sse.py  pyproject.toml
mcp-server-demo/: main.py  sample.py
mcp-server-demo/mcp_server_demo.egg-info/: PKG-INFO
